--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 streamlit==1.38.0
 streamlit-option-menu==0.4.0
-pymongo==4.5.0
+pymongo==4.9.1
+motor==3.7.1
 python-dotenv==1.0.0
 bcrypt==4.0.1
 requests==2.31.0
-cryptography==41.0.7
-pyOpenSSL==24.0.0
+dnspython==1.16.0
+certifi==2023.7.22
+eventlet==0.33.3
